--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -8,17 +8,44 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    background-position: center;
+    background-position:center 20%;
     min-width:100vw;
-    height: 95%;
+    height: 85%;
+    @include screen-lg {
+        background-position: 40%;
+    }
+    @include screen-md {
+        background-position: 45%;
+    }
     @include screen-sm {
         line-height: 1rem;
-        background-position: 50%;
+        background-image:none;
     }
     @include screen-xs {
         font-size: .7rem;
-        height: 200vw;
-        background-position: 25%;
+        height: 600px;
+        background-image: none;
+    }
+}
+
+.top-section {
+    @include screen-sm {
+        background-color: $brand-red-bright;
+        background-size: cover;
+        min-width: 100vw;
+        position: absolute;
+        margin-left: -16px;
+        padding-left: 18px;
+        height: 250px;
+    }
+    @include screen-xs {
+        background-color: $brand-red-bright;
+        background-size: cover;
+        min-width: 100vw;
+        position: absolute;
+        margin-left: -16px;
+        padding-left: 18px;
+        height: 240px;
     }
 }
 
@@ -42,31 +69,41 @@
 }
 
 .course-description {
-    font-size: 1.3rem;
-    margin-top: 15%;
+    font-size: 1rem;
+    margin-top: 20%;
+    color: white;
+    @include screen-md {
+        margin-top: 50%;
+    }
     @include screen-sm {
         font-size: .9rem;
         line-height: 1.2rem;
-        padding-top:70%;
-        margin-top: 25%;
+        margin-top: 260px;
+        color: black;
     }
     @include screen-xs {
-        padding-top:25%;
         font-size: .7rem;
         line-height: .9rem;
+        margin-top: 250px;
         margin-bottom: 1px;
+        color: black;
     }
 }
 
 .other-description {
-    font-size: 1.3rem;
+    font-size: 1rem;
+    color: white;
+    margin-bottom: 20px;
     @include screen-sm {
         font-size: .9rem;
         line-height: 1.2rem;
+        color: black;
     }
     @include screen-xs {
         font-size: .7rem;
         line-height: .9rem;
+        color: black;
+        margin-top: 10px;
     }
 }
 
@@ -157,13 +194,14 @@
 }
 
 .membership-icons {
-    height:100px;
-    width: 100px;
+    max-height: 60%;
+    max-width: 100%;
     margin: auto;
 }
 
 .membership-cards {
     margin:auto;
+    width: 90%;
     @include screen-md {
         margin-left: 10px;
     }
@@ -192,11 +230,17 @@
     @include screen-sm {
         margin: auto;
         width: 50%;
+        align-items: start;
     }
     @include screen-xs {
         margin:auto;
         width: 75%;
         padding: 1px;
         margin-top: 0;
+        align-items: start;
     }
+}
+
+.modal {
+    background-color: $brand-color2;
 }
