--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -10,7 +10,7 @@
     position: relative;
     background-position:center 20%;
     min-width:100vw;
-    height: 85%;
+    height: 85vh;
     @include screen-lg {
         background-position: 40%;
     }
@@ -19,18 +19,39 @@
     }
     @include screen-sm {
         line-height: 1rem;
-        background-image:none;
+        // background-image:none;
     }
     @include screen-xs {
         font-size: .7rem;
         height: 600px;
-        background-image: none;
+        background-size: cover;    
     }
+}
+
+.program-guide {
+    position: absolute !important;
+    right: 20%;
+    bottom: -30% !important;
+    > div {
+        background-color: $brand-grey-dark;
+        border: inherit;
+    }
+
+    @include screen-md {
+        display: none;
+    }
+    
+    // @include screen-sm {
+    //     display: none;
+    // }
+    // @include screen-xs {
+    //     display: none;
+    // }
 }
 
 .top-section {
     @include screen-sm {
-        background-color: $brand-red-bright;
+        // background-color: $brand-red-bright;
         background-size: cover;
         min-width: 100vw;
         position: absolute;
@@ -39,13 +60,22 @@
         height: 250px;
     }
     @include screen-xs {
-        background-color: $brand-red-bright;
+        // background-color: $brand-red-bright;
         background-size: cover;
         min-width: 100vw;
         position: absolute;
         margin-left: -16px;
         padding-left: 18px;
         height: 240px;
+    }
+}
+
+.why-learn {
+    margin-top: 30%;
+    text-transform: uppercase;
+
+    @include screen-sm {
+        margin-top: 10%;
     }
 }
 
@@ -82,11 +112,11 @@
         color: black;
     }
     @include screen-xs {
-        font-size: .7rem;
+        color: white;
+        font-size: .5rem;
         line-height: .9rem;
-        margin-top: 250px;
+        margin-top: 350px;
         margin-bottom: 1px;
-        color: black;
     }
 }
 
@@ -100,9 +130,9 @@
         color: black;
     }
     @include screen-xs {
-        font-size: .7rem;
+        font-size: .5rem;
         line-height: .9rem;
-        color: black;
+        color: white;
         margin-top: 10px;
     }
 }
@@ -218,29 +248,21 @@
 
 
 .other-button {
-    @include screen-md {
-        display: none;
-    }
-    @include screen-lg {
-        display: none;
-    }
-    @include screen-max {
-        display: none;
-    }
+    // margin-top: 15%;
+    display: none;
+    align-items: end;
+    margin: 15% auto 0% auto;
     @include screen-sm {
-        margin: auto;
+        display: block;
         width: 50%;
-        align-items: start;
     }
     @include screen-xs {
-        margin:auto;
+        display: block;
         width: 75%;
         padding: 1px;
-        margin-top: 0;
-        align-items: start;
     }
 }
 
 .modal {
-    background-color: $brand-color2;
+    background-color: $brand-color2 !important;
 }
