--- a/web/src/pages/careers/careers.scss
+++ b/web/src/pages/careers/careers.scss
@@ -13,6 +13,9 @@
             margin-left: 30px;
             margin-right: 30px;
             line-height: 25px;
+            @include screen-tablet-max {
+                font-size: 17px;
+            }
         }
     }
 }
@@ -29,22 +32,28 @@
 .careerTitle {
     font-size: 25px;
     @include screen-tablet-max {
-        font-size: 25px;
+        font-size: 20px;
+    }
+    ~ p {
+        @include screen-tablet-max {
+            font-size: 15px;
+        }
     }
 }
 
 .careerBody {
     font-size: 15px;
     @include screen-tablet-max {
-        font-size: 20px;
+        font-size: 15px;
         line-height: 30px;
     }
     p {
         font-size: 15px;
         line-height: 30px;
         @include screen-tablet-max {
-            font-size: 20px;
+            font-size: 15px;
             line-height: 30px;
+            padding-bottom: 50px;
         }
     }
 }
@@ -79,7 +88,7 @@
             font-size: 25px;
             margin-left: 30px;
             margin-right: 30px;
-            line-height: 40px;
+            // line-height: 40px;
         }
         
     }
