--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -1,11 +1,6 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
 
-.hello {
-  background-color: $brand-color;
-  color: white;
-}
-
 .desktop {
   display: block;
   @include screen-tablet-max {
@@ -20,17 +15,16 @@
   font-weight: 300;
 
   > a {
-    color: white;
     &:hover {
       color: $brand-color;
     }
   }
-
   > .hover-options {
     opacity: 0;
     display: flex;
     flex-direction: column;
     position: absolute;
+    color: black;
     background-color: white;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
     width: 180px;
@@ -74,22 +68,14 @@
 }
 
 .navbar > .container {
-  > span {
-    -webkit-animation-name: fadeInRight;
-    animation-name: fadeInRight;
-    -webkit-transform-origin: center;
-    transform-origin: center;
-    animation-duration: 600ms;
-    animation-timing-function: ease-in;
-  }
-  >.navbar-collapse > .navbar-nav > .row {
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+  -webkit-transform-origin: center;
+  transform-origin: center;
+  animation-duration: 600ms;
+  animation-timing-function: ease-in;
 
-    -webkit-animation-name: fadeInRight;
-    animation-name: fadeInRight;
-    -webkit-transform-origin: center;
-    transform-origin: center;
-    animation-duration: 600ms;
-    animation-timing-function: ease-in;
+  >.navbar-collapse > .navbar-nav > .row {
 
     .dropdown {
       display: flex;
@@ -100,18 +86,23 @@
           border: none;
         }
     }
+
+    a {
+      font-weight: 300;
+      @include font-size(7);
+      color: white;
+      &:hover {
+        color: $brand-color;
+      }
+    }
   
     > div {
-      
-
-      div a{
-        // color: white;
-          
-          @include font-size(7);
-          &:hover {
-            padding: 0px 20px;
-            color: $brand-color;
-          }  
+      div a{          
+        @include font-size(7);
+        &:hover {
+          padding: 0px 20px;
+          color: $brand-color;
+        }  
       }
       
       &:hover > .nav-link{
@@ -142,9 +133,7 @@
             color: $brand-color;
           }  
         }
-        // color: white;
       }
-      
     }
   }
 
@@ -173,21 +162,13 @@
       background-color: $brand-color;
       border: 1px solid $brand-color;
     }
-
-    
   }
+
   .navbar-collapse {
     @include screen-tablet-max {
       border-top: 1px solid white;
     }
   }
-}
-
-.navbar-dark .navbar-nav .nav-item .nav-link {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #fff;
-  letter-spacing: 1px;
 }
 
 
