background and styling changes

--- a/web/src/pages/india/india.module.scss
+++ b/web/src/pages/india/india.module.scss
@@ -8,7 +8,81 @@
     position: relative;
     background-position: 30% center;
     width: 100vw;
-    height: 80vh;
+    height: 115vh;
+    @include screen-lg {
+        background-position: 40%;
+    }
+    @include screen-md {
+        background-position: 45%;
+    }
+    @include screen-sm {
+        line-height: 1rem;
+        background-image:none;
+    }
+    @include screen-xs {
+        font-size: .7rem;
+        height: 600px;
+        background-size: cover;    
+    }
+}
+
+.top-section {
+    @include screen-sm {
+        background-color: $brand-red-bright;
+        background-size: cover;
+        min-width: 100vw;
+        position: absolute;
+        margin-left: -16px;
+        padding-left: 18px;
+        height:110vh;
+    }
+    @include screen-xs {
+        background-color: $brand-red-bright;
+        background-size: cover;
+        min-width: 100vw;
+        position: absolute;
+        margin-left: -16px;
+        padding-left: 18px;
+        height: 95vh;
+    }
+}
+
+.title {
+    margin-top: 40%;
+    @include screen-sm {
+        margin-top: 20%;
+    }
+    @include screen-xs {
+        margin-top: 20%;
+    }
+}
+
+.subtitle {
+    margin-top: 30%;
+    @include screen-sm {
+        margin-top: 20%;
+    }
+    @include screen-xs {
+        margin-top: 20%;
+    }
+}
+
+.description {
+    font-size: 1rem;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 90px;
+    @include screen-sm {
+        font-size: .9rem;
+        line-height: 1.2rem;
+        color: black;
+    }
+    @include screen-xs {
+        font-size: .5rem;
+        line-height: .9rem;
+        color: white;
+        margin-top: 10px;
+    }
 }
 
 .join-button {
@@ -37,6 +111,7 @@
 
 .phone {
     width: 50%;
+    top: -7%;
     @include screen-sm {
         display:none;
     }
@@ -49,9 +124,32 @@
     background-color: white;
     padding: 0;
 }
-// .engaged {
-//     background-image: url(../../images/learn/youth-engaged-bg.png);
-// }
+
+.engaged {
+    background-image: url(../../images/learn/youth-engaged-bg.png);
+    background-repeat: no-repeat;
+    position: center 15%;
+    min-width: 100vw;
+    background-size: 100%;
+    margin-top: 30px;
+    color: white;
+    @include screen-sm {
+        color: $brand-color2;
+    }
+    @include screen-xs {
+        color: $brand-color2;
+    }
+}
+
+.engaged-title {
+    color: white;
+    @include screen-sm {
+        color: $brand-color2;
+    }
+    @include screen-xs {
+        color: $brand-color2;
+    }
+}
 
 .questions {
     background-image: url(../../images/india/questions.jpeg);
@@ -73,4 +171,28 @@
     background-color: white;
     background-size: cover;
     margin: 0;
+}
+
+.program-guide {
+    position: absolute !important;
+    left: 65%;
+    bottom: -18%;
+    > div {
+        background-color: $brand-grey-dark;
+        border: inherit;
+    }
+    @include screen-lg {
+        left: 60%;
+        width: 120px;
+    }
+    @include screen-max {
+        bottom: -10%;
+    }
+    @include screen-md {
+        display: none;
+    }
+}
+
+.why-code {
+    margin-top: 160px;
 }
