--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -25,6 +25,7 @@ $text-ash: #999;
 $border-color: #ddd;
 $footer-text: #D1D2D4;
 $color-light-blue: #55CBF3;
+$color-red-dark: #AF1D24;
 
 // BOOTSTRAP VARS
 $card-height: 100%;
