--- a/web/src/pages/blog/blog.scss
+++ b/web/src/pages/blog/blog.scss
@@ -1,6 +1,10 @@
 @import '../../styles/variables';
 @import '../../styles/mixins';
 
+* {
+    letter-spacing: 0 !important;
+}
+
 .blog-card {
     .bg {
         position: absolute;
@@ -16,14 +20,45 @@
         transition: all .2s ease-in-out;
     }
 
+    .blog-details {
+        
+        .author {
+            font-size: .9rem !important;
+            @include screen-tablet-max {
+                font-size: 0.7rem !important;
+            }
+        }
+    
+        .date {
+            font-size: .9rem;
+            @include screen-tablet-max {
+                font-size: 0.7rem !important;
+            }
+        }
+    }
+
+    .title {
+        font-size: 1.3rem !important;
+        @include screen-tablet-max {
+            font-size: 1rem !important;
+        }
+    }
+
+    .description {
+        line-height: normal;
+        @include screen-tablet-max {
+            font-size: .7rem;
+        }
+    }
+
     &:hover {
         .blog-image {
             transform: scale(1.02);
-            background-color: rgba(193,32,41,0.95);
             
             >.blog-details {
                 opacity: 0;
-                transition: opacity .5s;
+                translate: 0 10%;
+                transition: opacity .5s, translate .5s ease-in-out;
             }
 
             .bg {
