--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -9,7 +9,7 @@
     background-size: cover;
     position: relative;
     background-position:center 20%;
-    min-width:100vw;
+    min-width:100%;
     height: 85vh;
     @include screen-lg {
         background-position: 40%;
@@ -53,7 +53,7 @@
     @include screen-sm {
         // background-color: $brand-red-bright;
         background-size: cover;
-        min-width: 100vw;
+        min-width: 100%;
         position: absolute;
         margin-left: -16px;
         padding-left: 18px;
@@ -62,7 +62,7 @@
     @include screen-xs {
         // background-color: $brand-red-bright;
         background-size: cover;
-        min-width: 100vw;
+        min-width: 100%;
         position: absolute;
         margin-left: -16px;
         padding-left: 18px;
@@ -142,7 +142,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    min-width: 100vw;
+    min-width: 100%;
     padding-top: 60px;
     @include screen-sm {
         background-position: bottom;
@@ -179,7 +179,7 @@
     background-image: url(../../../images/learn/youth-engaged-bg.png);
     background-repeat: no-repeat;
     position: center 15%;
-    min-width: 100vw;
+    min-width: 100%;
     background-size: 100%;
     margin-top: 30px;
     color: white;
@@ -212,7 +212,7 @@
 .scheduling {
     background-image: url(../../../images/learn/Youth_schedule_background.png);
     background-repeat: no-repeat;
-    min-width: 100vw;
+    min-width: 100%;
 }
 
 .list-text {
