--- a/web/src/components/Profile/Profile.module.scss
+++ b/web/src/components/Profile/Profile.module.scss
@@ -1,31 +1,182 @@
 .figure {
-  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.profile {
+  margin: auto;
 }
 
 .figcaption {
+  position: absolute;
+  width: 101%;
+  right: 15px;
+  bottom: 130px;
+  height: 492%;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.figcaption-rule {
+  position: absolute;
+  width: 101%;
+  right: 15px;
+  bottom: 130px;
+  height: 492%;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.figcaption-song {
+  position: absolute;
+  width: 101%;
+  right: 15px;
+  bottom: 130px;
+  height: 492%;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.7);
+}
+.figcaption-person {
+  position: absolute;
+  width: 101%;
+  right: 15px;
+  bottom: 130px;
+  height: 492%;
+  transition: opacity 0.4s ease-in-out;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.name-hover {
+  position: absolute;
   width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-.option-hover {
-  display: table;
+.rule-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 1;
 }
 
-.option-text {
+.song-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+}
+.person-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+}
+
+.lgx-vertical-fact {
   display: table-cell;
+  padding-top: 30px;
   vertical-align: middle;
   text-align: center;
+  color: #c12029;
   font-size: 14px;
+  line-height: 2.4rem;
 }
 
-figure figcaption {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-}
-
-.profile figcaption:hover {
-  justify-content: center;
+.lgx-vertical-rule {
+  display: table-cell;
+  padding-top: 30px;
+  vertical-align: middle;
   text-align: center;
-  height: 100%;
-  width: 100%;
+  color: #c12029;
+  font-size: 14px;
+  line-height: 2.4rem;
 }
+
+.lgx-vertical-song {
+  display: table-cell;
+  padding-top: 30px;
+  vertical-align: middle;
+  text-align: center;
+  color: #c12029;
+  font-size: 14px;
+  line-height: 2.4rem;
+}
+.lgx-vertical-person {
+  display: table-cell;
+  padding-top: 30px;
+  vertical-align: middle;
+  text-align: center;
+  color: #c12029;
+  font-size: 14px;
+  line-height: 2.4rem;
+}
+
+.fact-button:hover + .figcaption {
+  opacity: 1;
+}
+.rule-button:hover + .figcaption-rule {
+  opacity: 1;
+}
+.song-button:hover + .figcaption-song {
+  opacity: 1;
+}
+.person-button:hover + .figcaption-person {
+  opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .figcaption:hover {
+//   opacity: 0;
+// }
+
+// .name-hover:hover + .figcaption {
+//   justify-content: center;
+//   text-align: center;
+//   height: 100%;
+//   width: 100%;
+//   bottom: 0;
+//   opacity: 0;
+//   display: block;
+// }
+
+// .test {
+//   background-color: blue;
+//   height: 60px;
+//   width: 50px;
+//   left: -2px;
+//   bottom: 57px;
+//   position: absolute;
+//   display: block;
+// }
