--- a/web/src/components/Profile/Profile.module.scss
+++ b/web/src/components/Profile/Profile.module.scss
@@ -1,3 +1,6 @@
+@import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
+
 .figure {
   width: 100%;
   height: 100%;
@@ -11,45 +14,130 @@
 
 .figcaption {
   position: absolute;
-  width: 101%;
-  right: 15px;
-  bottom: 130px;
-  height: 492%;
+  width: 115%;
+  right: -9px;
+  bottom: 127px;
+  height: 545%;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
+  justify-content: center;
+
+  @include screen-md {
+    width: 108%;
+    height: 515%;
+    bottom: 139.5px;
+    right: -12px;
+  }
+
+  @include screen-sm {
+    width: 112%;
+    height: 460%;
+    bottom: 156px;
+  }
+
+  @include screen-xs {
+    width: 92%;
+    right: 14px;
+    height: 440%;
+    bottom: 165px;
+  }
 }
 
 .figcaption-rule {
   position: absolute;
-  width: 101%;
-  right: 15px;
-  bottom: 130px;
-  height: 492%;
+  width: 115%;
+  right: -20px;
+  bottom: 127px;
+  height: 545%;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
+  justify-content: center;
+
+  @include screen-md {
+    width: 108%;
+    height: 515%;
+    bottom: 139.5px;
+    right: -12px;
+  }
+
+  @include screen-sm {
+    width: 112%;
+    height: 460%;
+    bottom: 156px;
+  }
+
+  @include screen-xs {
+    width: 92%;
+    right: 14px;
+    height: 440%;
+    bottom: 165px;
+  }
 }
 
 .figcaption-song {
   position: absolute;
-  width: 101%;
-  right: 15px;
-  bottom: 130px;
-  height: 492%;
+  width: 115%;
+  right: -20px;
+  bottom: 127px;
+  height: 545%;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
+  justify-content: center;
+
+  @include screen-md {
+    width: 108%;
+    height: 515%;
+    bottom: 139.5px;
+    right: -12px;
+  }
+
+  @include screen-sm {
+    width: 112%;
+    height: 460%;
+    bottom: 156px;
+  }
+
+  @include screen-xs {
+    width: 92%;
+    right: 14px;
+    height: 440%;
+    bottom: 165px;
+  }
 }
+
 .figcaption-person {
   position: absolute;
-  width: 101%;
-  right: -1px;
-  bottom: 130px;
-  height: 492%;
+  width: 115%;
+  right: -20px;
+  bottom: 127px;
+  height: 545%;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
+  justify-content: center;
+
+  @include screen-md {
+    width: 108%;
+    height: 515%;
+    bottom: 139.5px;
+    right: -12px;
+  }
+
+  @include screen-sm {
+    width: 112%;
+    height: 460%;
+    bottom: 156px;
+  }
+
+  @include screen-xs {
+    width: 92%;
+    right: 14px;
+    height: 440%;
+    bottom: 165px;
+  }
 }
 
 .lgx-vertical-fact {
@@ -58,7 +146,7 @@
   vertical-align: middle;
   text-align: center;
   color: #c12029;
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 2.4rem;
 }
 
@@ -68,7 +156,7 @@
   vertical-align: middle;
   text-align: center;
   color: #c12029;
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 2.4rem;
 }
 
@@ -78,72 +166,32 @@
   vertical-align: middle;
   text-align: center;
   color: #c12029;
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 2.4rem;
 }
+
 .lgx-vertical-person {
   display: table-cell;
   padding-top: 30px;
   vertical-align: middle;
   text-align: center;
   color: #c12029;
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 2.4rem;
 }
 
-.fact-button:hover + .figcaption {
-  opacity: 1;
-}
-.rule-button:hover + .figcaption-rule {
-  opacity: 1;
-}
-.song-button:hover + .figcaption-song {
-  opacity: 1;
-}
-.person-button:hover + .figcaption-person {
+.fact-button:hover+.figcaption {
   opacity: 1;
 }
 
+.rule-button:hover+.figcaption-rule {
+  opacity: 1;
+}
 
+.song-button:hover+.figcaption-song {
+  opacity: 1;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// .figcaption:hover {
-//   opacity: 0;
-// }
-
-// .name-hover:hover + .figcaption {
-//   justify-content: center;
-//   text-align: center;
-//   height: 100%;
-//   width: 100%;
-//   bottom: 0;
-//   opacity: 0;
-//   display: block;
-// }
-
-// .test {
-//   background-color: blue;
-//   height: 60px;
-//   width: 50px;
-//   left: -2px;
-//   bottom: 57px;
-//   position: absolute;
-//   display: block;
-// }
+.person-button:hover+.figcaption-person {
+  opacity: 1;
+}
