--- a/web/src/pages/privacy/privacy.scss
+++ b/web/src/pages/privacy/privacy.scss
@@ -13,5 +13,5 @@
 }
 h6 {
     font-size: 15px; 
-    font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+    // font-family: Menlo,Monaco,Consolas,Courier New,monospace;
 }
