--- a/web/src/pages/terms/terms.scss
+++ b/web/src/pages/terms/terms.scss
@@ -10,7 +10,7 @@
     }
     h6 {
         font-size: 15px; 
-        font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+        // font-family: Menlo,Monaco,Consolas,Courier New,monospace;
     }
     .par {
         font-size: 16px;
