more caption styling changes

--- a/web/src/components/Profile/Profile.module.scss
+++ b/web/src/components/Profile/Profile.module.scss
@@ -211,7 +211,7 @@
   display: table-cell;
   padding-top: 30px;
   vertical-align: middle;
-  text-align: center;
+  text-align: start;
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
@@ -221,7 +221,7 @@
   display: table-cell;
   padding-top: 30px;
   vertical-align: middle;
-  text-align: center;
+  text-align: start;
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
@@ -231,7 +231,7 @@
   display: table-cell;
   padding-top: 30px;
   vertical-align: middle;
-  text-align: center;
+  text-align: start;
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
