--- a/web/src/pages/privacy/privacy.scss
+++ b/web/src/pages/privacy/privacy.scss
@@ -1,8 +1,8 @@
 @media (min-width: 768px) {
-.col-sm-offset-2 {
-    margin-left: 17%;
-    width: 62%;
-}
+    .col-sm-offset-2 {
+        margin-left: 17%;
+        width: 62%;
+    }
 }
 .list {
     font-size: 16px;
@@ -13,5 +13,8 @@
 }
 h6 {
     font-size: 15px; 
+}
+
+.menlo-font {
     font-family: Menlo,Monaco,Consolas,Courier New,monospace;
 }
