--- a/web/src/components/Profile/Profile.module.scss
+++ b/web/src/components/Profile/Profile.module.scss
@@ -14,201 +14,217 @@
 }
 
 .figcaption {
-  position: table-cell;
-  display: table-cell center;
-  width: 246.65px;
-  max-width: 300px;
-  right: 25px;
-  bottom: 131px;
-  height: 246.65px;
-  max-height: 300px;
+  position: absolute;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
   justify-content: center;
-
-  @include screen-max {
-    height: 260px;
-    // height: auto;
-    width: 260px;
-    right: -4px;
-    bottom: 136px;
-  }
-
-  @include screen-md {
-    width: 283.28px;
-    max-width: 300px;
-    height: 283.28px;
-    max-height: 300px;
-    bottom: 139.5px;
-    right: 16px;
-  }
-
-  @include screen-sm {
-    max-width: 400px;
-    width: 366.56px;
-    height: 300px;
-    bottom: 156px;
-    right: -5.5px;
-  }
-
+  display: flex;
+  height: 60% ;
+  width: 96%;
+  padding-left: 10px;
+  padding-right: 7px;
   @include screen-xs {
-    width: inherit;
-    max-width: 402px;
-    right: -5px;
-    left: -5px;
-    height: 300px;
-    bottom: 164.5px;
-    justify-content: center;
+    height: 50%;
   }
 }
-
 .figcaption-rule {
-  position: table;
-  width: 246.65px;
-  max-width: 300px;
-  right: 12px;
-  bottom: 131px;
-  height: 246.65px;
-  max-height: 346.65px;
+  position: absolute;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
   justify-content: center;
-
-  @include screen-max {
-    height: 260px;
-    width: 260px;
-    right: -4px;
-    bottom: 136px;
-  }
-  
-  @include screen-md {
-    width: 283.28px;
-    max-width: 300px;
-    height: 283.28px;
-    max-height: 300px;
-    bottom: 139.5px;
-    right: 16px;
-  }
-
-  @include screen-sm {
-    max-width: 400px;
-    width: 366.56px;
-    height: 300px;
-    bottom: 156px;
-    right: -5.5px;
-  }
-
+  height: 60% ;
+  width: 96%;
+  padding-left: 10px;
+  padding-right: 7px;
   @include screen-xs {
-    width: inherit;
-    max-width: 402px;
-    right: -5px;
-    left: -5px;
-    height: 300px;
-    bottom: 164.5px;
-    justify-content: center;
+    height: 50%;
+    width: 92%;
   }
 }
 
 .figcaption-song {
-  position: table;
-  width: 246.65px;
-  max-width: 300px;
-  right: 25px;
-  bottom: 131px;
-  height: 246.65px;
-  max-height: 300px;
+  position: absolute;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
   justify-content: center;
-
-  @include screen-max {
-    height: 260px;
-    width: 260px;
-    right: -4px;
-    bottom: 136px;
-  }
-  
-  @include screen-md {
-    width: 283.28px;
-    max-width: 300px;
-    height: 283.28px;
-    max-height: 300px;
-    bottom: 139.5px;
-    right: 16px;
-  }
-
-  @include screen-sm {
-    max-width: 400px;
-    width: 366.56px;
-    height: 300px;
-    bottom: 156px;
-    right: -5.5px;
-  }
-
+  height: 60% ;
+  width: 96%;
+  padding-left: 10px;
+  padding-right: 7px;
   @include screen-xs {
-    width: inherit;
-    max-width: 402px;
-    right: -5px;
-    left: -5px;
-    height: 300px;
-    bottom: 164.5px;
-    justify-content: center;
+    height: 50%;
   }
 }
 
 .figcaption-person {
-  position: table;
-  width: 246.65px;
-  max-width: 300px;
-  right: 25px;
-  bottom: 131px;
-  height: 246.65px;
-  max-height: 300px;
+  position: absolute;
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
   background: rgba(255, 255, 255, 0.7);
   justify-content: center;
-  word-break: break-all;
-
-  @include screen-max {
-    height: 260px;
-    width: 260px;
-    right: -4px;
-    bottom: 136px;
-    justify-content: center;
-  }
-  
-  @include screen-md {
-    width: 283.28px;
-    max-width: 300px;
-    height: 283.28px;
-    max-height: 300px;
-    bottom: 139.5px;
-    right: 16px;
-  
-  }
-
-  @include screen-sm {
-    max-width: 400px;
-    width: 366.56px;
-    height: 300px;
-    bottom: 156px;
-    right: -5.5px;
-  }
-
+  height: 60% ;
+  width: 96%;
+  padding-left: 10px;
+  padding-right: 7px;
   @include screen-xs {
-    width: inherit;
-    max-width: 402px;
-    right: -5px;
-    left: -5px;
-    height: 300px;
-    bottom: 164.5px;
-    justify-content: center;
+    height: 50%;
   }
 }
+
+.picture-div {
+  display: flex;
+
+}
+
+// .figcaption-rule {
+//   position: table;
+//   width: 246.65px;
+//   max-width: 300px;
+//   right: 12px;
+//   bottom: 131px;
+//   height: 246.65px;
+//   max-height: 346.65px;
+//   transition: opacity 0.4s ease-in-out;
+//   opacity: 0;
+//   background: rgba(255, 255, 255, 0.7);
+//   justify-content: center;
+
+//   @include screen-max {
+//     height: 260px;
+//     width: 260px;
+//     right: -4px;
+//     bottom: 130px;
+//   }
+  
+//   @include screen-md {
+//     width: 283.28px;
+//     max-width: 300px;
+//     height: 283.28px;
+//     max-height: 300px;
+//     bottom: 139.5px;
+//     right: 16px;
+//   }
+
+//   @include screen-sm {
+//     max-width: 400px;
+//     width: 366.56px;
+//     height: 300px;
+//     bottom: 156px;
+//     right: -5.5px;
+//   }
+
+//   @include screen-xs {
+//     width: inherit;
+//     max-width: 402px;
+//     right: -5px;
+//     left: -5px;
+//     height: 300px;
+//     bottom: 164.5px;
+//     justify-content: center;
+//   }
+// }
+
+// .figcaption-song {
+//   position: table;
+//   width: 246.65px;
+//   max-width: 300px;
+//   right: 25px;
+//   bottom: 131px;
+//   height: 246.65px;
+//   max-height: 300px;
+//   transition: opacity 0.4s ease-in-out;
+//   opacity: 0;
+//   background: rgba(255, 255, 255, 0.7);
+//   justify-content: center;
+
+//   @include screen-max {
+//     height: 260px;
+//     width: 260px;
+//     right: -4px;
+//     bottom: 130px;
+//   }
+  
+//   @include screen-md {
+//     width: 283.28px;
+//     max-width: 300px;
+//     height: 283.28px;
+//     max-height: 300px;
+//     bottom: 139.5px;
+//     right: 16px;
+//   }
+
+//   @include screen-sm {
+//     max-width: 400px;
+//     width: 366.56px;
+//     height: 300px;
+//     bottom: 156px;
+//     right: -5.5px;
+//   }
+
+//   @include screen-xs {
+//     width: inherit;
+//     max-width: 402px;
+//     right: -5px;
+//     left: -5px;
+//     height: 300px;
+//     bottom: 164.5px;
+//     justify-content: center;
+//   }
+// }
+
+// .figcaption-person {
+//   position: table;
+//   width: 246.65px;
+//   max-width: 300px;
+//   right: 25px;
+//   bottom: 131px;
+//   height: 246.65px;
+//   max-height: 300px;
+//   transition: opacity 0.4s ease-in-out;
+//   opacity: 0;
+//   background: rgba(255, 255, 255, 0.7);
+//   justify-content: center;
+//   word-break: break-all;
+
+//   @include screen-max {
+//     height: 260px;
+//     width: 260px;
+//     right: -4px;
+//     bottom: 130px;
+//     justify-content: center;
+//   }
+  
+//   @include screen-md {
+//     width: 283.28px;
+//     max-width: 300px;
+//     height: 283.28px;
+//     max-height: 300px;
+//     bottom: 139.5px;
+//     right: 16px;
+  
+//   }
+
+//   @include screen-sm {
+//     max-width: 400px;
+//     width: 366.56px;
+//     height: 300px;
+//     bottom: 156px;
+//     right: -5.5px;
+//   }
+
+//   @include screen-xs {
+//     width: inherit;
+//     max-width: 402px;
+//     right: -5px;
+//     left: -5px;
+//     height: 300px;
+//     bottom: 164.5px;
+//     justify-content: center;
+//   }
+// }
 
 .lgx-vertical-fact {
   display: table-cell;
@@ -218,6 +234,10 @@
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
+  @include screen-xs {
+    line-height: 1.3rem;
+    font-size: .52rem;
+  }
 }
 
 .lgx-vertical-rule {
@@ -228,6 +248,10 @@
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
+  @include screen-xs {
+    line-height: 1rem;
+    font-size: .52rem;
+  }
 }
 
 .lgx-vertical-song {
@@ -238,6 +262,10 @@
   color: #c12029;
   font-size: .8rem;
   line-height: 1.8rem;
+  @include screen-xs {
+    line-height: 1rem;
+    font-size: .52rem;
+  }
 }
 
 .lgx-vertical-person {
@@ -250,20 +278,52 @@
   font-size: .8rem;
   line-height: 1.8rem;
   word-break: break-all;
+  @include screen-xs {
+    line-height: 1rem;
+    font-size: .52rem;
+  }
 }
 
-.fact-button:hover+.figcaption {
+// .fact-button:hover+.figcaption {
+//   opacity: 1;
+// }
+
+.figcaption-show {
   opacity: 1;
 }
 
-.rule-button:hover+.figcaption-rule {
+.figcaption-rule-show {
   opacity: 1;
 }
 
-.song-button:hover+.figcaption-song {
+.figcaptionSongShow {
   opacity: 1;
 }
 
-.person-button:hover+.figcaption-person {
+.figcaptionPersonShow {
   opacity: 1;
+}
+.btn-group-full-width {
+  width: 100%;
+}
+.song-button {
+  width: 50%;
+  font-size: .7rem;
+  left:1px;
+  border-right-style: hidden;
+  padding: none;
+}
+.person-button {
+  width: 50%;
+  font-size: .7rem;
+  padding: none;
+}
+
+.fact-button {
+  // width: 50%;
+  font-size: .7rem;
+}
+.rule-button {
+  // width: 50%;
+  font-size: .7rem;
 }
