--- a/web/src/pages/salesforce/salesforce.scss
+++ b/web/src/pages/salesforce/salesforce.scss
@@ -11,12 +11,26 @@
         width: 100vw;
         background-position: center top;
         background-size: contain;
+        @include screen-tablet-max {
+            width: 100vw;
+        }
     }
     
     .header-text {
         margin-top: 250px;
         color: black;
         text-align: center;
+        p {
+            @include screen-tablet-max {
+            font-size: 15px;
+        }
+        }
+    }
+
+    .par {
+        @include screen-tablet-max {
+            font-size: 17px;
+        }
     }
 }
 
@@ -32,16 +46,26 @@
         text-align: center;
         padding-top: 60px;
         padding-bottom: 50px;
-
     }
     .winter-dates {
         margin-left: 300px;
         border-right: 2px solid red;
         color: white;
+        @include screen-tablet-max {
+            margin-left: 0;
+            margin-right: auto;
+            max-width: 50%;
+            border-right: none;
+        }
     }
     .spring-dates {
         margin-right: 300px;
         color: white;
+        @include screen-tablet-max {
+            margin-right: 0;
+            margin-left: auto;
+            max-width: 50%;
+        }
     }
     .button {
         display: flex;
@@ -54,6 +78,11 @@
 #why-salesforce {
     .title, .paragraph {
         text-align: right;
+    }
+    p {
+        @include screen-tablet-max {
+            font-size: 17px;
+        }
     }
     .arrow-container {
         width: 150px;
@@ -74,6 +103,24 @@
     .laptop-image {
         width: 600px;
         height: 350px;
+        @include screen-tablet-max {
+            width: 300px;
+            height: 150px;
+        }
+    }
+
+    p {
+        @include screen-tablet-max {
+            font-size: 17px;
+        }
+    }
+}
+
+#curriculum {
+    li {
+        @include screen-tablet-max {
+            font-size: 20px;
+        }
     }
 }
 
@@ -82,15 +129,28 @@
     background-size: cover;
     height: 50vh;
     width: 100vw;
+    @include screen-tablet-max {
+        height: 110vh;
+    }
 
     .laptop-image {
         width: 550px; 
         height: 300px;
         margin-top: 40px;
+        @include screen-tablet-max {
+            width: 250px;
+            height: 150px;
+        }
     }
 }
 
 #FAQs {
+    .accordion-header, .accordion-body {
+        @include screen-tablet-max {
+            font-size: 17px;
+        }
+    }
+
     .accordion-item:hover {
         box-shadow: 1px 1px 5px 1px #c12029;
     }
