--- a/web/src/components/BackgroundCard/BackgroundCard.module.scss
+++ b/web/src/components/BackgroundCard/BackgroundCard.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import "../../styles/mixins"; 
 
 .card-background-filter {
   background-position: 25% top;
@@ -19,4 +20,18 @@
     border-radius: 5%;
     background-color: rgba(193,32,41,0.8);
   }
+}
+
+.card-title {
+  font-size: .9rem;
+  line-height: .9rem;
+  letter-spacing: 1px;
+  @include screen-xs {
+    font-size: .7rem;
+  }
+}
+
+.card-text {
+  font-size: .7rem;
+  line-height: .9rem;
 }
